# packages/server/src/core/types/post.type.ts
@@ -5,6 +5,7 @@ import { ListEmotionsType } from './list-emotions.type';
 export class PostType {
   id: number;
   text: string;
+  countAnswers: number;
   // thread: ThreadType;
   emotions?: ListEmotionsType;
   owner: UserType;
@@ -14,6 +15,7 @@ export class PostType {
   constructor(post: PostModel) {
     this.id = post.id;
     this.text = post.text;
+    this.countAnswers = post.countAnswers ?? 0;
     this.owner = new UserType(post.owner!);
     // this.thread = new ThreadType(post.thread!);
     this.emotions = post.emotions?.length ? new ListEmotionsType(post.emotions!) : undefined;
